--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,18 @@ version: "3.9"
 
 services:
   react-app:
-    build: .
+    build: ./client
     ports:
       - "5173:5173"
     volumes:
-      - .:/app
+      - ./client:/app
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
+    depends_on:
+      - backend
+  
+  backend:
+    build: ./server
+    ports:
+      - "8000:8000"
